# NaturalLanguage-VisionAnalysis

./: Architecture_thinking.md  README.md  config.json  config_multi_camera.json  docker-compose.yml  install_onnxruntime.sh
api/src/routes/: clip_retrieval.py
api/src/services/: base.py  clip_retrieval_service.py
cpp_source/: CMakeLists.txt
cpp_source/src/: CMakeLists.txt  main.cpp  main_example.cpp  onnx_vision_example.cpp
cpp_source/src/common/: CMakeLists.txt
cpp_source/src/common/include/: base_model.hpp  benchmark.hpp  config_parser.hpp  factories.hpp  interfaces.hpp  logger.hpp  onnx_session.cpp  onnx_session.hpp  utils.hpp
cpp_source/src/common/src/: base_model.cpp  config_parser.cpp  factories.cpp  onnx_session.cpp  vision_factories.cpp
cpp_source/src/components/: CMakeLists.txt
cpp_source/src/components/frame_sampler/: CMakeLists.txt
cpp_source/src/components/frame_sampler/include/: frame_samplers.hpp
cpp_source/src/components/frame_sampler/src/: frame_samplers.cpp
cpp_source/src/components/frame_sampler/tests/: CMakeLists.txt  test_sampler.cpp
cpp_source/src/components/media_processing/: CMakeLists.txt
cpp_source/src/components/media_processing/include/: MediaProcessor.hpp
cpp_source/src/components/media_processing/src/: MediaProcessor.cpp
cpp_source/src/components/object_detection/: CMakeLists.txt
cpp_source/src/components/object_detection/include/: yolox_detector.hpp
cpp_source/src/components/object_detection/src/: yolox_detector.cpp
cpp_source/src/components/object_detection/tests/: test_object_detection.cpp
cpp_source/src/components/object_detector/include/: object_detectors.hpp  onnx_object_detector.hpp
cpp_source/src/components/object_detector/src/: object_detectors.cpp  onnx_object_detector.cpp
cpp_source/src/components/storage_handler/: CMakeLists.txt
cpp_source/src/components/storage_handler/include/: milvus_storage_handler.hpp
cpp_source/src/components/storage_handler/src/: milvus_storage_handler.cpp
cpp_source/src/components/stream_handler/: CMakeLists.txt  demo.cpp
cpp_source/src/components/stream_handler/include/: vision_stream_handlers.hpp
cpp_source/src/components/stream_handler/src/: vision_stream_handlers.cpp
cpp_source/src/components/stream_handler/tests/: CMakeLists.txt  test_stream_handler.cpp
cpp_source/src/components/tracker/include/: sort_tracker.hpp
cpp_source/src/components/tracker/src/: sort_tracker.cpp
cpp_source/src/components/tracker/tests/: test_tracker.cpp
cpp_source/src/components/video_analysis_engine/: CMakeLists.txt
cpp_source/src/components/video_analysis_engine/include/: VideoAnalysisEngine.hpp
cpp_source/src/components/video_analysis_engine/src/: VideoAnalysisEngine.cpp
cpp_source/src/components/vlm_engine/: CMakeLists.txt
cpp_source/src/components/vlm_engine/include/: clip_image_encoder.hpp
cpp_source/src/components/vlm_engine/src/: clip_image_encoder.cpp
cpp_source/src/components/vlm_engine/tests/: test_clip_image_encoder.cpp
docker/: Dockerfile.dev  README.md  build_docker.sh
